--- a/config/waybar/config
+++ b/config/waybar/config
@@ -13,6 +13,10 @@
         "clock"
     ],
     "modules-right": [
+        "idle_inhibitor",
+        "cpu",
+        "memory",
+        "backlight",
         "pulseaudio",
         "network",
         "battery",
@@ -31,6 +35,34 @@
         "interval": 1,
         "format": "{:%I:%M %p}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt>{calendar}</tt>"
+    },
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": "",
+            "deactivated": ""
+        }
+    },
+    "cpu": {
+        "interval": 10,
+        "format": " {usage}%",
+        "max-length": 10
+    },
+    "memory": {
+        "interval": 30,
+        "format": " {}%",
+        "max-length": 10
+    },
+    "backlight": {
+        "format": "{icon} {percent}%",
+        "format-icons": [
+            "",
+            "",
+            ""
+        ],
+        "on-scroll-up": "brightnessctl set 1%+",
+        "on-scroll-down": "brightnessctl set 1%-",
+        "min-length": 6
     },
     "battery": {
         "states": {
