--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -4,11 +4,11 @@
 $mainMod = SUPER
 
 # ────────────── launch ──────────────
-bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, RETURN, exec, ghostty
 bind = $mainMod, D, exec, wofi --show drun
-bind = $mainMod, E, exec, kitty -e yazi
+bind = $mainMod, E, exec, ghostty -e yazi
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, M, exec, kitty -e btop
+bind = $mainMod, M, exec, ghostty -e btop
 
 
 # ─────────── window / system ─────────
