--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,4 +1,4 @@
-# Ghostty Config - V9 Pro Edition
+# Ghostty Config - V9-hyprdots Edition
 # "Tactical, Fast, Semi-Transparent"
 
 # --- Typography ---
