--- a/config/hypr/animations.conf
+++ b/config/hypr/animations.conf
@@ -1,5 +1,5 @@
 # animations.conf
-# V9 Baseline: Smooth, Ease-Out. No bounce.
+# V9-hyprdots: Smooth, Ease-Out. No bounce.
 
 animations {
     enabled = true
