--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -1,4 +1,4 @@
-# V9 Baseline Rules (Safe Mode)
+# V9-hyprdots Rules (Safe Mode)
 # Hyprland >= 0.52 compatible
 # -----------------------------------------------------
 
