--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,4 +1,4 @@
-## name:     V9 Baseline
+## name:     V9-hyprdots
 ## author:   v9mirza
 ## license:  MIT
 ## blurb:    Monochrome + Steel Blue Accent
