--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -4,7 +4,7 @@ general {
   border_size = 2
   layout = dwindle
   
-  # V9 Baseline Colors
+  # V9-hyprdots Colors
   col.active_border = rgb(5f7c8a)
   col.inactive_border = rgb(2a2a2a)
 }
