--- a/config/waybar/config
+++ b/config/waybar/config
@@ -105,12 +105,13 @@
         }
     },
     "network": {
-        "format-wifi": "",
-        "format-ethernet": "",
+        "format-wifi": "  {essid}",
+        "format-ethernet": "  {ipaddr}",
         "tooltip-format": "{ifname} via {gwaddr}",
         "format-linked": "{ifname} (No IP)",
-        "format-disconnected": "⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-disconnected": "⚠ Disconnected",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "on-click": "nm-connection-editor"
     },
     "custom/power": {
         "format": "",
