--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -1,29 +1,27 @@
 # V9-hyprdots Rules (Safe Mode)
 # Hyprland >= 0.52 compatible
-# -----------------------------------------------------
 
 # -----------------------------------------------------
-# Layer Rules (Blur the Shell)
+# Layer Rules (Blur)
 # -----------------------------------------------------
 
-# Waybar
+# Waybar and Wofi Blur
 layerrule = blur on, match:namespace waybar
 layerrule = ignore_alpha 1, match:namespace waybar
 
-# Wofi
 layerrule = blur on, match:namespace wofi
 layerrule = ignore_alpha 1, match:namespace wofi
 
-
 # -----------------------------------------------------
-# Window Rules (Floating Dialogs & Utilities)
+# Window Rules (Floating)
 # -----------------------------------------------------
 
-# File dialogs (toolkit-agnostic, safe)
+# Dialogs
 windowrulev2 = float, windowtype:^(dialog|utility)$
 windowrulev2 = center, windowtype:^(dialog|utility)$
 windowrulev2 = size 800 600, windowtype:^(dialog|utility)$
 
-# Utility applications
+# Common Utilities (Float & Center)
 windowrulev2 = float, class:^(pavucontrol|nm-connection-editor|blueman-manager)$
 windowrulev2 = center, class:^(pavucontrol|nm-connection-editor|blueman-manager)$
+windowrulev2 = size 700 500, class:^(nm-connection-editor)$
