--- a/config/waybar/config
+++ b/config/waybar/config
@@ -20,6 +20,7 @@
         "pulseaudio",
         "network",
         "battery",
+        "tray",
         "custom/power"
     ],
     "hyprland/window": {
