--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -25,3 +25,8 @@ windowrulev2 = size 800 600, windowtype:^(dialog|utility)$
 windowrulev2 = float, class:^(pavucontrol|nm-connection-editor|blueman-manager)$
 windowrulev2 = center, class:^(pavucontrol|nm-connection-editor|blueman-manager)$
 windowrulev2 = size 700 500, class:^(nm-connection-editor)$
+
+# Custom Popups (V9-nmtui)
+windowrulev2 = float, class:^(v9-nmtui)$
+windowrulev2 = center, class:^(v9-nmtui)$
+windowrulev2 = size 700 500, class:^(v9-nmtui)$
