--- a/config/waybar/config
+++ b/config/waybar/config
@@ -20,7 +20,6 @@
         "pulseaudio",
         "network",
         "battery",
-        "tray",
         "custom/power"
     ],
     "hyprland/window": {
@@ -112,7 +111,7 @@
         "format-linked": "{ifname} (No IP)",
         "format-disconnected": "⚠ Disconnected",
         "format-alt": "{ifname}: {ipaddr}/{cidr}",
-        "on-click": "nm-connection-editor"
+        "on-click": "ghostty --class=v9-nmtui -e nmtui"
     },
     "custom/power": {
         "format": "",
