--- a/config/waybar/config
+++ b/config/waybar/config
@@ -110,8 +110,7 @@
         "tooltip-format": "{ifname} via {gwaddr}",
         "format-linked": "{ifname} (No IP)",
         "format-disconnected": "⚠ Disconnected",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}",
-        "on-click": "ghostty --class=v9-nmtui -e /home/mirza/.config/hypr/scripts/nmtui-wrapper.sh"
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "custom/power": {
         "format": "",
