--- a/config/waybar/config
+++ b/config/waybar/config
@@ -18,7 +18,7 @@
         "memory",
         "backlight",
         "pulseaudio",
-        "network",
+        "tray",
         "battery",
         "custom/power"
     ],
