--- a/config/waybar/config
+++ b/config/waybar/config
@@ -18,8 +18,10 @@
         "memory",
         "backlight",
         "pulseaudio",
-        "tray",
+        "network",
+        "bluetooth",
         "battery",
+        "tray",
         "custom/power"
     ],
     "hyprland/window": {
@@ -111,6 +113,16 @@
         "format-linked": "{ifname} (No IP)",
         "format-disconnected": "⚠ Disconnected",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
+    },
+    "bluetooth": {
+        "format": " {status}",
+        "format-connected": " {device_alias}",
+        "format-connected-battery": " {device_alias} {device_battery_percentage}%",
+        "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+        "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
+        "on-click": "ghostty -e bluetoothctl"
     },
     "custom/power": {
         "format": "",
