--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -21,3 +21,8 @@ exec-once = nm-applet --indicator
 
 # notification daemon
 exec-once = dunst
+
+# system tray applets
+exec-once = blueman-applet
+exec-once = pasystray
+exec-once = udiskie &
