--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,8 +1,10 @@
 # v9-hyprdots entry point
 
-# Cursor Theme
+# Cursor & Icon Theme
 env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
+env = GTK_THEME,Adwaita-dark
+env = GTK_ICON_THEME,Papirus-Dark
 
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/input.conf
