--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -7,6 +7,9 @@ exec-once = waybar
 # wallpaper
 exec-once = ~/.config/hypr/scripts/init-wallpaper.sh
 
+# theme
+exec-once = ~/.config/hypr/scripts/init-theme.sh
+
 # idle manager
 exec-once = hypridle
 
