--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -7,9 +7,6 @@ exec-once = waybar
 # wallpaper
 exec-once = ~/.config/hypr/scripts/init-wallpaper.sh
 
-# theme
-exec-once = ~/.config/hypr/scripts/init-theme.sh
-
 # idle manager
 exec-once = hypridle
 
@@ -19,12 +16,12 @@ exec-once = wl-paste --watch cliphist store
 # authentication agent
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-# network manager applet (handled by init-theme)
-# exec-once = nm-applet --indicator
+# network manager applet
+exec-once = nm-applet --indicator
 
 # notification daemon
 exec-once = dunst
 
-# system tray applets handled by init-theme.sh
-# exec-once = blueman-applet
-# exec-once = udiskie &
+# system tray applets
+exec-once = blueman-applet
+exec-once = udiskie &
