--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
 env = GTK_THEME,Adwaita-dark
 env = GTK_ICON_THEME,Papirus-Dark
+env = QT_QPA_PLATFORMTHEME,gtk3
 
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/input.conf
