--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -4,6 +4,11 @@
 # bar
 exec-once = waybar
 
+# theme
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Adwaita-dark'
+exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
+
 # wallpaper
 exec-once = ~/.config/hypr/scripts/init-wallpaper.sh
 
