--- a/config/waybar/config
+++ b/config/waybar/config
@@ -17,10 +17,11 @@
         "idle_inhibitor",
         "cpu",
         "memory",
-        "backlight",
         "pulseaudio",
+        "custom/power",
         "battery",
-        "custom/power"
+        "network",
+        "bluetooth"
     ],
     "hyprland/window": {
         "format": "{}"
@@ -104,9 +105,26 @@
             ]
         }
     },
+    "bluetooth": {
+        "format": " {status}",
+        "format-disabled": "",
+        "format-connected": " {num_connections}",
+        "tooltip-format": "{controller_alias}\t{controller_address}",
+        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
+        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+        "on-click": "blueman-manager"
+    },
     "tray": {
         "icon-size": 16,
         "spacing": 10
+    },
+    "network": {
+        "format-wifi": " {essid}",
+        "format-ethernet": " {ipaddr}/{cidr}",
+        "tooltip-format": "{ifname} via {gwaddr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "⚠ Disconnected",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "custom/power": {
         "format": "",
