--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -12,8 +12,10 @@ general {
 # 1. Background (The Void)
 background {
     monitor =
+    path = screenshot
     color = rgba(0, 0, 0, 1.0)
-    blur_passes = 0
+    blur_passes = 3
+    blur_size = 4
 }
 
 # 2. Time (Massive, Bottom-Left)
