--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -5,6 +5,6 @@ general {
   layout = dwindle
   
   # V9-hyprdots Colors
-  col.active_border = rgb(5f7c8a)
-  col.inactive_border = rgb(2a2a2a)
+  col.active_border = rgb(7aa2f7)
+  col.inactive_border = rgb(414868)
 }
