--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -89,7 +89,7 @@ input-field {
     inner_color = rgba(0, 0, 0, 0.0) # Transparent
     font_color = rgb(255, 255, 255)
     fade_on_empty = false
-    placeholder_text = <span foreground="##5f7c8a">ENTER PASSWORD</span>
+    placeholder_text = <span foreground="##7aa2f7">ENTER PASSWORD</span>
     hide_input = false
     position = 0, 0
     halign = center
