--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -5,7 +5,7 @@ $mainMod = SUPER
 
 # ────────────── launch ──────────────
 bind = $mainMod, RETURN, exec, ghostty
-bind = $mainMod, D, exec, wofi --show drun
+bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, E, exec, ghostty -e yazi
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, M, exec, ghostty -e btop
