--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -4,7 +4,7 @@ general {
   border_size = 2
   layout = dwindle
   
-  # V9-hyprdots Colors
-  col.active_border = rgb(7aa2f7)
-  col.inactive_border = rgb(414868)
+  # Neo-Cyber Noir Colors
+  col.active_border = rgb(5eead4)
+  col.inactive_border = rgb(1d2330)
 }
