--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -12,10 +12,8 @@ general {
 # 1. Background (The Void)
 background {
     monitor =
-    path = screenshot
-    color = rgba(0, 0, 0, 1.0)
-    blur_passes = 3
-    blur_size = 4
+    color = rgba(12, 15, 20, 1.0)
+    blur_passes = 0
 }
 
 # 2. Time (Massive, Bottom-Left)
@@ -89,7 +87,7 @@ input-field {
     inner_color = rgba(0, 0, 0, 0.0) # Transparent
     font_color = rgb(255, 255, 255)
     fade_on_empty = false
-    placeholder_text = <span foreground="##7aa2f7">ENTER PASSWORD</span>
+    placeholder_text = <span foreground="##5eead4">ENTER PASSWORD</span>
     hide_input = false
     position = 0, 0
     halign = center
