--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -4,7 +4,7 @@ general {
   border_size = 2
   layout = dwindle
   
-  # Neo-Cyber Noir Colors
-  col.active_border = rgb(5eead4)
-  col.inactive_border = rgb(1d2330)
+  # Modern Cyber Aesthetic Colors
+  col.active_border = rgb(38f8e0)
+  col.inactive_border = rgb(273244)
 }
