--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -4,7 +4,7 @@ general {
   border_size = 2
   layout = dwindle
   
-  # Modern Cyber Aesthetic Colors
-  col.active_border = rgb(38f8e0)
-  col.inactive_border = rgb(273244)
+  # Dark Steel Cyber Colors
+  col.active_border = rgb(5f7c8a)
+  col.inactive_border = rgb(1f252d)
 }
