--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -12,7 +12,7 @@ general {
 # 1. Background (The Void)
 background {
     monitor =
-    color = rgba(17, 24, 39, 1.0)
+    color = rgba(11, 14, 17, 1.0)
     blur_passes = 0
 }
 
@@ -87,7 +87,7 @@ input-field {
     inner_color = rgba(0, 0, 0, 0.0) # Transparent
     font_color = rgb(255, 255, 255)
     fade_on_empty = false
-    placeholder_text = <span foreground="##38f8e0">ENTER PASSWORD</span>
+    placeholder_text = <span foreground="##5f7c8a">ENTER PASSWORD</span>
     hide_input = false
     position = 0, 0
     halign = center
