--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -1,10 +1,10 @@
 general {
   gaps_in = 4
   gaps_out = 8
-  border_size = 2
+  border_size = 1
   layout = dwindle
   
-  # Dark Steel Cyber Colors
-  col.active_border = rgb(5f7c8a)
-  col.inactive_border = rgb(1f252d)
+  # STEEL Colors
+  col.active_border = rgb(7e9cd8)
+  col.inactive_border = rgb(363646)
 }
