--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -4,7 +4,7 @@ general {
   border_size = 1
   layout = dwindle
   
-  # STEEL Colors
-  col.active_border = rgb(7e9cd8)
-  col.inactive_border = rgb(363646)
+  # DARK KNIGHT Colors
+  col.active_border = rgb(5f7c8a)
+  col.inactive_border = rgb(1b1f24)
 }
