--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -4,7 +4,7 @@ general {
   border_size = 1
   layout = dwindle
   
-  # DARK KNIGHT Colors
-  col.active_border = rgb(5f7c8a)
-  col.inactive_border = rgb(1b1f24)
+  # CHARCOAL Colors
+  col.active_border = rgb(6f7a80)
+  col.inactive_border = rgb(242424)
 }
