--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,27 +1,27 @@
-## name:     V9-hyprdots
+## name:     V9-hyprdots (Charcoal)
 ## author:   v9mirza
 ## license:  MIT
-## blurb:    Monochrome + Steel Blue Accent
+## blurb:    Charcoal + Muted Blue-Gray
 
 # Core Colors
-background #0f0f0f
+background #1b1e21
 foreground #d6d6d6
-selection_background #2a2a2a
+selection_background #6f8896
 selection_foreground #d6d6d6
-url_color #5f7c8a
-cursor #5f7c8a
+url_color #6f8896
+cursor #6f8896
 
 # Tabs
-active_tab_background #5f7c8a
-active_tab_foreground #ffffff
-inactive_tab_background #1a1a1a
-inactive_tab_foreground #8a8a8a
+active_tab_background #6f8896
+active_tab_foreground #d6d6d6
+inactive_tab_background #23272c
+inactive_tab_foreground #9a9a9a
 
 # Color Palette (Muted/Monochrome Focus)
 
 # Black
-color0 #1a1a1a
-color8 #2a2a2a
+color0 #23272c
+color8 #9a9a9a
 
 # Red (Muted)
 color1 #cc6666
@@ -35,9 +35,9 @@ color10 #88aa77
 color3 #ddcc77
 color11 #ddcc77
 
-# Blue (Steel Accent)
-color4 #5f7c8a
-color12 #5f7c8a
+# Blue (Accent)
+color4 #6f8896
+color12 #6f8896
 
 # Magenta (Muted)
 color5 #aa88aa
