--- a/config/hypr/decoration.conf
+++ b/config/hypr/decoration.conf
@@ -2,7 +2,7 @@
 # V9-hyprdots: Blur shell, Sharp work.
 
 decoration {
-    rounding = 4
+    rounding = 2
 
     # Blur (Enabled for Shell components)
     blur {
@@ -19,6 +19,7 @@ decoration {
     inactive_opacity = 1.0
     fullscreen_opacity = 1.0
 
+    # Shadows (Soft, diffused)
     # Shadows (Soft, diffused)
     shadow {
         enabled = true
