--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,27 +1,27 @@
-## name:     V9-hyprdots (Charcoal)
+## name:     V9-hyprdots
 ## author:   v9mirza
 ## license:  MIT
-## blurb:    Charcoal + Muted Blue-Gray
+## blurb:    Monochrome + Steel Blue Accent
 
 # Core Colors
-background #1b1e21
+background #0f0f0f
 foreground #d6d6d6
-selection_background #6f8896
+selection_background #2a2a2a
 selection_foreground #d6d6d6
-url_color #6f8896
-cursor #6f8896
+url_color #5f7c8a
+cursor #5f7c8a
 
 # Tabs
-active_tab_background #6f8896
-active_tab_foreground #d6d6d6
-inactive_tab_background #23272c
-inactive_tab_foreground #9a9a9a
+active_tab_background #5f7c8a
+active_tab_foreground #ffffff
+inactive_tab_background #1a1a1a
+inactive_tab_foreground #8a8a8a
 
 # Color Palette (Muted/Monochrome Focus)
 
 # Black
-color0 #23272c
-color8 #9a9a9a
+color0 #1a1a1a
+color8 #2a2a2a
 
 # Red (Muted)
 color1 #cc6666
@@ -35,9 +35,9 @@ color10 #88aa77
 color3 #ddcc77
 color11 #ddcc77
 
-# Blue (Accent)
-color4 #6f8896
-color12 #6f8896
+# Blue (Steel Accent)
+color4 #5f7c8a
+color12 #5f7c8a
 
 # Magenta (Muted)
 color5 #aa88aa
