--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -8,11 +8,11 @@ background #0f0f0f
 foreground #d6d6d6
 selection_background #2a2a2a
 selection_foreground #d6d6d6
-url_color #5f7c8a
-cursor #5f7c8a
+url_color #6f7a80
+cursor #6f7a80
 
 # Tabs
-active_tab_background #5f7c8a
+active_tab_background #6f7a80
 active_tab_foreground #ffffff
 inactive_tab_background #1a1a1a
 inactive_tab_foreground #8a8a8a
@@ -36,8 +36,8 @@ color3 #ddcc77
 color11 #ddcc77
 
 # Blue (Steel Accent)
-color4 #5f7c8a
-color12 #5f7c8a
+color4 #6f7a80
+color12 #6f7a80
 
 # Magenta (Muted)
 color5 #aa88aa
