--- a/config/cava/config
+++ b/config/cava/config
@@ -25,5 +25,5 @@ foreground = '#ffffff'
 
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#5f7c8a'
+gradient_color_1 = '#6f7a80'
 gradient_color_2 = '#d6d6d6'
