--- a/config/hypr/animations.conf
+++ b/config/hypr/animations.conf
@@ -7,8 +7,8 @@ animations {
     # Smooth Ease-Out Curve
     bezier = smoothOut, 0.16, 1, 0.3, 1
 
-    animation = windows, 1, 5, smoothOut, popin 80%
-    animation = windowsOut, 1, 5, smoothOut, popin 80%
+    animation = windows, 1, 5, smoothOut, slide
+    animation = windowsOut, 1, 5, smoothOut, slide
     
     animation = border, 1, 5, smoothOut
     animation = fade, 1, 5, smoothOut
