--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -28,3 +28,10 @@ windowrulev2 = size 700 500, class:^(nm-connection-editor)$
 windowrulev2 = rounding 8, floating:1
 
 
+# -----------------------------------------------------
+# Smart Picture-in-Picture
+# -----------------------------------------------------
+windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = pin, title:^(Picture-in-Picture)$
+windowrulev2 = move 100%-w-20 60, title:^(Picture-in-Picture)$
+
