--- a/config/btop/btop.conf
+++ b/config/btop/btop.conf
@@ -5,7 +5,7 @@ truecolor = True
 force_tty = False
 presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:default cpu:0:block,net:0:tty"
 vim_keys = True
-rounded_corners = False
+rounded_corners = True
 graph_symbol = "braille"
 shown_boxes = "cpu mem net proc"
 update_ms = 2000
