--- a/config/starship.toml
+++ b/config/starship.toml
@@ -13,7 +13,7 @@ error_symbol   = "[❯](bold red)"
 
 # ── Directory ─────────────────────────────────────────────────────
 [directory]
-style = "bold white"
+style = "bold #6f7a80"
 truncation_length = 3
 truncate_to_repo = false
 
