--- a/presets/hypr-knight/config/kitty/theme.conf
+++ b/presets/hypr-knight/config/kitty/theme.conf
@@ -4,15 +4,15 @@
 ## blurb:    Monochrome + Steel Blue Accent
 
 # Core Colors
-background #0f0f0f
+background #050505
 foreground #d6d6d6
-selection_background #2a2a2a
-selection_foreground #d6d6d6
-url_color #6f7a80
-cursor #6f7a80
+selection_background #c7a008
+selection_foreground #050505
+url_color #c7a008
+cursor #c7a008
 
 # Tabs
-active_tab_background #6f7a80
+active_tab_background #c7a008
 active_tab_foreground #ffffff
 inactive_tab_background #1a1a1a
 inactive_tab_foreground #8a8a8a
