--- a/presets/hypr-knight/config/hypr/general.conf
+++ b/presets/hypr-knight/config/hypr/general.conf
@@ -5,6 +5,6 @@ general {
   layout = dwindle
   
   # CHARCOAL Colors
-  col.active_border = rgb(6f7a80)
-  col.inactive_border = rgb(242424)
+  col.active_border = rgb(c7a008)
+  col.inactive_border = rgb(333333)
 }
