--- a/presets/hypr-knight/config/kitty/theme.conf
+++ b/presets/hypr-knight/config/kitty/theme.conf
@@ -4,15 +4,15 @@
 ## blurb:    Monochrome + Steel Blue Accent
 
 # Core Colors
-background #050505
+background #000000
 foreground #d6d6d6
-selection_background #c7a008
-selection_foreground #050505
-url_color #c7a008
-cursor #c7a008
+selection_background #262626
+selection_foreground #ffffff
+url_color #788496
+cursor #ffffff
 
 # Tabs
-active_tab_background #c7a008
+active_tab_background #788496
 active_tab_foreground #ffffff
 inactive_tab_background #1a1a1a
 inactive_tab_foreground #8a8a8a
