--- a/presets/hypr-knight/config/hypr/animations.conf
+++ b/presets/hypr-knight/config/hypr/animations.conf
@@ -4,14 +4,14 @@
 animations {
     enabled = true
 
-    # Smooth Ease-Out Curve
-    bezier = smoothOut, 0.16, 1, 0.3, 1
+    # Tactical Curve (Snap, don't float)
+    bezier = tactical, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 5, smoothOut, slide
-    animation = windowsOut, 1, 5, smoothOut, slide
+    animation = windows, 1, 3, tactical, slide
+    animation = windowsOut, 1, 3, tactical, slide
     
-    animation = border, 1, 5, smoothOut
-    animation = fade, 1, 5, smoothOut
+    animation = border, 1, 3, tactical
+    animation = fade, 1, 3, tactical
     
-    animation = workspaces, 1, 4, smoothOut, slide
+    animation = workspaces, 1, 3, tactical, slide
 }
